feat added the change password logic for admin
