# Controllers/adminController.js
@@ -2,6 +2,9 @@ const catchAsync = require("../ErrorHandler/catchAsync");
 const AppError = require("../ErrorHandler/appError");
 const Admin = require("./../Models/adminModel");
 const authUtils = require("../Utils/authUtils");
+const bcrypt = require("bcryptjs");
+const {sendEmail} = require('./../Utils/email');
+const {resetTokenGenerator} = require('./../Utils/authUtils');
 
 
 // cool creator
@@ -121,31 +124,106 @@ exports.Erase = catchAsync(async (req, res, next) => {
 	res.status(204).json({});
 });
 
-// exports.ChangePasswordAdmin = catchAsync(async (req, res, next) => {
-// const id = req.params.id;
-// let admin = await Admin.findById(id).select("+password");
 
-// if (! admin) {
-// next(new AppError("no admin found with this id ", 404));
-// return;
-// }
-// const {oldPassword, newPassword} = req.body;
-// const isMatch = await bcrypt.compare(oldPassword, admin.password);
+// people are so stupid :)
+// ? changing password which is done by the super admin or the admin himself.
+exports.ChangePassword = catchAsync(async (req, res, next) => {
+	const id = req.params.id;
+	let admin = await Admin.findById(id).select("+password");
+	if (admin.role !== "Super Admin" || admin._id.toString() !== id) { // Check if the admin is not a Super Admin or if the admin ID doesn't match the request ID
+		next(new AppError("Not authorized", 401));
+		return;
+	}
+	const {oldPassword, newPassword} = req.body;
+	const isMatch = await bcrypt.compare(oldPassword, admin.password);
 
-// if (! isMatch) {
-// next(new AppError("password does not match ", 401));
-// return;
-// }
+	if (! isMatch) {
+		next(new AppError("password does not match ", 401));
+		return;
+	}
 
-// console.log("is match");
-// const passwordNewhash = await bcrypt.hash(newPassword, 12);
-// const data = {
-// password: passwordNewhash
-// };
+	console.log("is match");
+	const passwordNewhash = await bcrypt.hash(newPassword, 12);
+	const data = {
+		password: passwordNewhash
+	};
 
-// admin = await Admin.findByIdAndUpdate(id, data, {
-// new: true,
-// runValidators: false
-// });
-// res.status(201).json({msg: "password change"});
-// });
+	admin = await Admin.findByIdAndUpdate(id, data, {
+		new: true,
+		runValidators: false
+	});
+	res.status(201).json({msg: "password changed"});
+});
+
+
+// for reseting password using sms or email.
+exports.ResetPassword = catchAsync(async (req, res, next) => {
+	const token = req.params.token;
+
+	let admin = {
+		role: "none"
+	};
+	admin = token ? await Admin.findOne({passwordResetToken: token}).select("+password") : admin;
+	console.log(admin);
+	// excpet the new password .
+	const {newPassword} = req.body;
+	admin.password = newPassword;
+	admin.passwordResetToken = "None";
+	await admin.save({new: true, runValidators: false});
+
+	res.status(201).json({message: "password changed"});
+});
+
+exports.ForgetPassword = catchAsync(async (req, res, next) => {
+	{
+		// hre it better be by phone Number for now.
+		// while filling forget password i expect the phone number
+		const data = req.body;
+		let phoneNumber;
+		phoneNumber = data.phoneNumber ? data.phoneNumber : null;
+		const admin = await Admin.findOne(
+			{phoneNumber: phoneNumber}
+		);
+		if (! admin) {
+			res.status(404).json({status: "404", message: "Admin with this email address/ phone number is not found."})
+		}
+		// this method should be recreated .
+		// const resetToken = admin.createPasswordResetToken();
+		// const resetToken = "the new token that has been generated";
+		const resetToken = resetTokenGenerator();
+		admin.passwordResetToken = resetToken;
+		await admin.save(
+			{validateBeforeSave: false}
+		);
+		const resetUrl = `${
+			req.protocol
+		}://${
+			req.get('host')
+		}/api/v1/admin/reset-password/${resetToken}`;
+		const message = `click this link to reset your password ${resetUrl}
+			 if your are don't asked for reseting
+			  your password, please ignore this email`;
+
+		try {
+			const subject = "Reseting Password in Addis Ababa Kebele renewal systemusing email.";
+			const sendMailResponse = await sendEmail({ // email: admin.email,
+				email: "bernabastekkalign@gmail.com",
+				subject: "Reseting Password in Addis Ababa Kebele renewal systemusing email.",
+				message: message
+			});
+			console.log(sendMailResponse);
+			// const sendSmsResponse = await sendSMS(message);
+
+		} catch (err) {
+			admin.passwordResetToken = undefined;
+			await admin.save({validateBeforeSave: false});
+			res.status(500).json({status: "cannot send an email please try again", message: err})
+		}
+		res.status(200).json(
+			{status: "success", message: "A reset link is sent to your email"}
+		)
+
+
+	}
+
+});
