# Routers/residentRoute.js
@@ -6,7 +6,10 @@ const {
 	Change,
 	Erase,
 	ResidentInKebele,
-	ResidentMyId
+	ResidentMyId,
+	ChangePassword,
+	ResetPassword,
+	ForgetPassword
 } = require("./../Controllers/residentController");
 const {protect, protectAdmin} = require("./../Middleware/authorization");
 const router = require("express").Router();
@@ -16,4 +19,9 @@ router.get("/in-my-kebele", protect, protectAdmin, ResidentInKebele)
 router.post("/login/", Login);
 router.get("/my-id", protect, ResidentMyId);
 router.route("/:id/").get(Read).patch(Change).delete(Erase);
+
+// password management
+router.patch("/change-password/:id", ChangePassword);
+router.post("/forget-password", ForgetPassword);
+router.post("/reset-password/:token", ResetPassword);
 module.exports = router;
