# Routers/systemAdminRoute.js
@@ -5,7 +5,10 @@ const {
 	ReadMany,
 	StartSystem,
 	Change,
-	Erase
+	Erase,
+	ChangePassword,
+	ResetPassword,
+	ForgetPassword
 } = require("./../Controllers/adminController");
 
 const router = require("express").Router();
@@ -13,4 +16,10 @@ router.route("/").get(ReadMany).post(Register);
 router.route("/start-system").post(StartSystem);
 router.post("/login/", Login);
 router.route("/:id/").get(Read).patch(Change).delete(Erase);
+
+
+// password management
+router.patch("/change-password/:id", ChangePassword);
+router.post("/forget-password", ForgetPassword);
+router.post("/reset-password/:token", ResetPassword);
 module.exports = router;
